--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
 
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>Hi, I'm Stewart Fraser. This is my <strong>portfolio</strong> site, where I showcase the projects I developed during
-                an intensive three-month <strong>JustIT</strong> software development bootcamp.
+                an intensive three-month <strong>Just IT</strong> software development bootcamp.
             </p>
             <p>
                 Alongside coding, I am also <strong>passionate</strong> about my family, playing
@@ -16,7 +16,7 @@
             </p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
-            <p>The JustIT bootcamp focused on five popular technologies:
+            <p>The Just IT bootcamp focused on five popular technologies:
                 <strong>JavaScript</strong>,
                 <strong>Python</strong>,
                 <strong>SQL</strong>,
@@ -62,14 +62,15 @@
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
-                Additional bootcamp completion certificates awarded for:
+                Additional bootcamp course certificates awarded for:
             </p>
             <ul>
-                <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
+                <li><strong>APIs</strong> "Backend Development and APIs" (FreeCodeCamp)</li>
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
+                <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
             </ul><p>
                 <a href="{{ url_for('certificates') }}">
-                    <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View Bootcamp Certificates</span>
+                    <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View Certificates</span>
                 </a>
             </p>
         </div>
