minor text alteration

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -5,7 +5,7 @@
 <div class="w3-container">
     <div class="w3-container">
         <div class="w3-text-dark-grey">
-            <h1>Bootcamp Course Certificates</h1>
+            <h1>Bootcamp and Course Certificates</h1>
         </div>
     </div>
     <div class="w3-container my-margin-top-10">
