--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -62,7 +62,7 @@
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
-                Additional bootcamp course certificates awarded for:
+                Additional bootcamp and course certificates awarded for:
             </p>
             <ul>
                 <li><strong>APIs</strong> "Backend Development and APIs" (FreeCodeCamp)</li>
