Cert for Go course completion

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -9,17 +9,34 @@
         </div>
     </div>
     <div class="w3-container my-margin-top-10">
+        <h3>Online Go (Golang) Course</h3>
+        <p>
+            "Mastering the Go programming language."
+        </p>
+        <a
+            href="{{ url_for('static', filename='docs/cert-go-grider.pdf') }}"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            <img
+                src="../static/docs/cert-go-grider.png"
+                alt="FCC certificate"
+                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+            />
+        </a>
+    </div>
+    <div class="w3-container my-margin-top-40">
         <h3>Online Backend Development and APIs Course</h3>
         <p>
             "Creating microservices using Node, JavaScript, Express and MongoDB."
         </p>
         <a
-            href="{{ url_for('static', filename='docs/cert-fcc-backend-api-cert.pdf') }}"
+            href="{{ url_for('static', filename='docs/cert-backend-api-fcc.pdf') }}"
             target="_blank"
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-fcc-backend-api-cert.png"
+                src="../static/docs/cert-backend-api-fcc.png"
                 alt="FCC certificate"
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
