--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -62,10 +62,11 @@
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
-                Additional bootcamp and course certificates awarded for:
+                Recent course certificates awarded for:
             </p>
             <ul>
                 <li><strong>APIs</strong> "Backend Development and APIs" (FreeCodeCamp)</li>
+                <li><strong>Software Development</strong> "In-person Bootcamp" (Just IT)</li>
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
                 <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
             </ul><p>
