Adding go to list of certs on homepage

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -65,6 +65,7 @@
                 Recent course certificates awarded for:
             </p>
             <ul>
+                <li><strong>Go</strong> "The Complete Developer's Guide" (Udemy)</li>
                 <li><strong>APIs</strong> "Backend Development and APIs" (FreeCodeCamp)</li>
                 <li><strong>Software Development</strong> "In-person Bootcamp" (Just IT)</li>
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
