--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -65,8 +65,9 @@
                 Recent course certificates awarded for:
             </p>
             <ul>
+                <li><strong>C#</strong> "Foundational C# with Microsoft" (Microsoft and FCC)</li>
                 <li><strong>Go</strong> "The Complete Developer's Guide" (Udemy)</li>
-                <li><strong>APIs</strong> "Backend Development and APIs" (FreeCodeCamp)</li>
+                <li><strong>APIs</strong> "Backend Development and APIs" (FCC)</li>
                 <li><strong>Software Development</strong> "In-person Bootcamp" (Just IT)</li>
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
                 <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
