update CV. add links to the websites that issued the certificate

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -8,11 +8,12 @@
             <h1>Bootcamp and Course Certificates</h1>
         </div>
     </div>
-    <!-- Top certificate has margin top 10, all the others have margin top 40 -->
-    <div class="w3-container my-margin-top-10">
+    <!-- Top certificate has margin top 30, all the others have margin top 40 -->
+    <div class="w3-container my-margin-top-30">
         <h3>Online C# Course</h3>
         <p>
-            "Comprehensive introduction to the C# programming language with Microsoft."
+            "Comprehensive introduction to the C# programming language with
+            Microsoft."
         </p>
         <a
             href="{{ url_for('static', filename='docs/cert-fcc-ms-csharp.pdf') }}"
@@ -25,12 +26,16 @@
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
+        <p>
+            <a
+                href="https://freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/foundational-c-sharp-with-microsoft"
+                >View C# certificate and exam results on freeCodeCamp website</a
+            >
+        </p>
     </div>
     <div class="w3-container my-margin-top-40">
         <h3>Online Go (Golang) Course</h3>
-        <p>
-            "Mastering the Go programming language."
-        </p>
+        <p>"Mastering the Go programming language."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-go-grider.pdf') }}"
             target="_blank"
@@ -42,11 +47,17 @@
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
+        <p>
+            <a href="https://ude.my/UC-39842b87-9f21-4303-ad79-44a69760dd18"
+                >View Go certificate on Udemy</a
+            >
+        </p>
     </div>
     <div class="w3-container my-margin-top-40">
         <h3>Online Backend Development and APIs Course</h3>
         <p>
-            "Creating microservices using Node, JavaScript, Express and MongoDB."
+            "Creating microservices using Node, JavaScript, Express and
+            MongoDB."
         </p>
         <a
             href="{{ url_for('static', filename='docs/cert-backend-api-fcc.pdf') }}"
@@ -59,6 +70,12 @@
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
+        <p>
+            
+            <a href="https://freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/back-end-development-and-apis"
+                >View API certificate and course projects on freeCodeCamp</a
+            >
+        </p>
     </div>
     <div class="w3-container my-margin-top-40">
         <h3>Just IT Software Development Bootcamp</h3>
@@ -92,6 +109,11 @@
                 class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
+        <p>
+            <a href="https://ude.my/UC-ec6421c1-4784-4ba5-902d-229c7d08c2b4"
+                >View SQL certificate on Udemy</a
+            >
+        </p>
     </div>
 
     <div class="w3-container my-margin-top-40">
@@ -111,6 +133,11 @@
                 class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
+        <p>
+            <a href="https://ude.my/UC-ac1d437e-d4f3-43ec-8b1f-27386db098b9"
+                >View Python certificate on Udemy</a
+            >
+        </p>
     </div>
 </div>
 
