minor: put JS first

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -56,7 +56,7 @@
     <div class="w3-container my-margin-top-40">
         <h3>Online Backend Development and APIs Course</h3>
         <p>
-            "Creating microservices using Node, JavaScript, Express and
+            "Creating microservices using JavaScript, Node, Express and
             MongoDB."
         </p>
         <a
