adding JS DSA cert. filmflix just direct to replit

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -10,6 +10,29 @@
     </div>
     <!-- Top certificate has margin top 30, all the others have margin top 40 -->
     <div class="w3-container my-margin-top-30">
+        <h3>Online JavaScript Course</h3>
+        <p>
+            "Implementing algorithms and data structures using JavaScript."
+        </p>
+        <a
+            href="{{ url_for('static', filename='docs/cert-fcc-javascript-dsa.pdf') }}"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            <img
+                src="../static/docs/cert-fcc-javascript-dsa.png"
+                alt="JavaScript FCC certificate"
+                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+            />
+        </a>
+        <p>
+            <a
+                href="https://www.freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/javascript-algorithms-and-data-structures"
+                >View JavaScript certificate on freeCodeCamp website</a
+            >
+        </p>
+    </div>
+    <div class="w3-container my-margin-top-40">
         <h3>Online C# Course</h3>
         <p>
             "Comprehensive introduction to the C# programming language with
@@ -22,7 +45,7 @@
         >
             <img
                 src="../static/docs/cert-fcc-ms-csharp.png"
-                alt="FCC certificate"
+                alt="C# Microscoft and FCC certificate"
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
@@ -43,7 +66,7 @@
         >
             <img
                 src="../static/docs/cert-go-grider.png"
-                alt="FCC certificate"
+                alt="Go Udemy certificate"
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
@@ -66,7 +89,7 @@
         >
             <img
                 src="../static/docs/cert-backend-api-fcc.png"
-                alt="FCC certificate"
+                alt="API FCC certificate"
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
@@ -105,7 +128,7 @@
         >
             <img
                 src="../static/docs/cert-sql-portilla.png"
-                alt="sql certificate"
+                alt="SQL Udemey Certificate"
                 class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
@@ -129,7 +152,7 @@
         >
             <img
                 src="../static/docs/cert-python-portilla.png"
-                alt="python certificate"
+                alt="Python Udemy Certificate"
                 class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
