--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -65,6 +65,7 @@
                 Recent course certificates awarded for:
             </p>
             <ul>
+                <li><strong>JavaScript</strong> "JavaScript Algorithms and Data Structures" (freeCodeCamp)</li>
                 <li><strong>C#</strong> "Foundational C# with Microsoft" (Microsoft & freeCodeCamp)</li>
                 <li><strong>Go</strong> "The Complete Developer's Guide" (Udemy)</li>
                 <li><strong>APIs</strong> "Backend Development and APIs" (freeCodeCamp)</li>
