--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -5,7 +5,8 @@
     A Python program for querying a SQLite film database. The user can perform CRUD operations on the database via a command
     line interface.
     Pandas library is used for formatting the tables.
-    The source code is <a href="https://replit.com/@koalaTreeBear/filmdatabase">hosted on Replit</a>.
+    The source code is hosted on Replit where it can be
+    viewed and executed.
 </p>
 <!-- <p>
     The production website is just a place-holder for the
