--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -1,18 +1,14 @@
 {% extends "project-base.html" %}
 
 {% block project_written_content %}
+<!-- A direct link to the replit webpage where the python code can be run. -->
+<!-- The code on replit is from bitbucket.org:weebucket/week11-day03-python-sqlite-pandas-retro-view-to-cmd-line.git -->
 <p>
     A Python program for querying a SQLite film database. The user can perform CRUD operations on the database via a command
     line interface.
     Pandas library is used for formatting the tables.
     The source code is <a href="https://replit.com/@koalaTreeBear/filmdatabase">hosted on Replit</a>.
 </p>
-<!-- <p>
-    The production website is just a place-holder for the
-    Replit code -
-    it is <strong>not</strong> responsive nor mobile friendly. Tables best viewed
-    on screen widths of <strong>700 pixels</strong> plus.
-</p> -->
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Pandas</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">SQL</div>
