--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,8 +11,7 @@
                 an intensive three-month <strong>Just IT</strong> software development bootcamp.
             </p>
             <p>
-                Alongside coding, I am also <strong>passionate</strong> about my family, playing
-                football and chess.
+                Alongside coding, I am also <strong>passionate</strong> about chess, astronomy and football.
             </p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
