warning about spin up time for free flask on render

--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -4,6 +4,8 @@
 <p>
     A simple microblogging page. A post is read by Python / Flask and then saved
     into a MongoDB Cloud Atlas database. Previous posts are read by Python / Flask from the database and are displayed on the page where they can be seen and deleted.
+
+    <strong>It may take some time for this Flask project to spin up as it's hosted on a free Render service.</strong>
 </p>
 <div class="my-project-microblog-diagram-wrapper w3-margin-bottom">
     <img class="my-project-microblog-diagram" src="{{ url_for('static', filename='images/microblog.drawio.png') }}"
