new email address, new github and bitbucket workspaces, new CV (also with this updated info)

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -4,7 +4,7 @@
 {% block content %}
 <main class="w3-container w3-margin-bottom">
     <div class="w3-container my-contact-container">
-        <a href="mailto:s.i.fraser@outlook.com" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
+        <a href="mailto:contact@sfraser.io" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
             Email</a>
     </div>
     <div class="w3-container my-contact-container">
@@ -12,12 +12,12 @@
                 class="fa-brands fa-linkedin"></i> LinkedIn</a>
     </div>
     <div class="w3-container my-contact-container">
-        <a href="https://bitbucket.org/weebucket/workspace/repositories" class="my-contact-link"><i
-                class="fa-brands fa-bitbucket"></i> Bitbucket</a>
+        <a href="https://github.com/sfraser-dev" class="my-contact-link"><i class="fa-brands fa-github"></i>
+            GitHub</a>
     </div>
     <div class="w3-container my-contact-container">
-        <a href="https://github.com/KoalaTreeHotel" class="my-contact-link"><i class="fa-brands fa-github"></i>
-            GitHub</a>
+        <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-contact-link"><i
+                class="fa-brands fa-bitbucket"></i> Bitbucket</a>
     </div>
 </main>
 {% endblock %}
