--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -5,7 +5,7 @@
 <main class="w3-container w3-margin-bottom">
     <div class="w3-container my-contact-container">
         <a href="mailto:contact@sfraser.io" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
-            Email</a>
+            Email: contact@sfraser.io</a>
     </div>
     <div class="w3-container my-contact-container">
         <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
@@ -13,11 +13,11 @@
     </div>
     <div class="w3-container my-contact-container">
         <a href="https://github.com/sfraser-dev" class="my-contact-link"><i class="fa-brands fa-github"></i>
-            GitHub</a>
+            GitHub: @sfraser-dev</a>
     </div>
     <div class="w3-container my-contact-container">
         <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-contact-link"><i
-                class="fa-brands fa-bitbucket"></i> Bitbucket</a>
+                class="fa-brands fa-bitbucket"></i> Bitbucket: @sfraser-dev</a>
     </div>
 </main>
 {% endblock %}
