rearrange contact page

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -8,16 +8,16 @@
             Email: contact@sfraser.io</a>
     </div>
     <div class="w3-container my-contact-container">
-        <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
-                class="fa-brands fa-linkedin"></i> LinkedIn</a>
-    </div>
-    <div class="w3-container my-contact-container">
         <a href="https://github.com/sfraser-dev" class="my-contact-link"><i class="fa-brands fa-github"></i>
             GitHub: @sfraser-dev</a>
     </div>
     <div class="w3-container my-contact-container">
         <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-contact-link"><i
                 class="fa-brands fa-bitbucket"></i> Bitbucket: @sfraser-dev</a>
+    </div>
+    <div class="w3-container my-contact-container">
+        <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
+                class="fa-brands fa-linkedin"></i> LinkedIn Profile</a>
     </div>
 </main>
 {% endblock %}
