adding 'legacy' to bitbucket repo

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -13,7 +13,7 @@
     </div>
     <div class="w3-container my-contact-container">
         <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-contact-link"><i
-                class="fa-brands fa-bitbucket"></i> Bitbucket: @sfraser-dev</a>
+                class="fa-brands fa-bitbucket"></i> Bitbucket: @sfraser-dev (legacy)</a>
     </div>
     <div class="w3-container my-contact-container">
         <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
