--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -4,20 +4,25 @@
 {% block content %}
 <main class="w3-container w3-margin-bottom">
     <div class="w3-container my-contact-container">
+        <i class="fa-solid fa-phone"></i> Mobile: <span style="color: gray;">+44-77-4067-8423</span>
+    </div>
+    <div class="w3-container my-contact-container">
         <a href="mailto:contact@sfraser.io" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
-            Email: contact@sfraser.io</a>
+            Email: <span style="color: gray;">contact@sfraser.io</span></a>
+    </div>
+    <div class="w3-container my-contact-container">
+        <a href="https://www.linkedin.com/in/sfraser-dev" class="my-contact-link"><i
+                class="fa-brands fa-linkedin"></i> LinkedIn: <span style="color: gray;">sfraser-dev</span></a>
     </div>
     <div class="w3-container my-contact-container">
         <a href="https://github.com/sfraser-dev" class="my-contact-link"><i class="fa-brands fa-github"></i>
-            GitHub: @sfraser-dev</a>
+            GitHub: <span style="color: gray;">@sfraser-dev</span></a>
     </div>
+    <!--
     <div class="w3-container my-contact-container">
         <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-contact-link"><i
                 class="fa-brands fa-bitbucket"></i> Bitbucket: @sfraser-dev (legacy)</a>
     </div>
-    <div class="w3-container my-contact-container">
-        <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
-                class="fa-brands fa-linkedin"></i> LinkedIn Profile</a>
-    </div>
+    -->
 </main>
 {% endblock %}
