--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stewart Fraser</title>
     <link rel="icon" href="{{ url_for('static', filename='images/favicons/program.png') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/w3.css') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/w3.css') }}"> -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/w3-adapt.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
